# WatchSAT

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: clause.rs  lbool.rs  lib.rs  lit.rs  var.rs
