[package]
name = "watchsat"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "A high-performance CDCL SAT engine with Two-Watched Literals in Rust."
readme = "README.md"
repository = "https://github.com/pstlab/WatchSAT"
license-file = "LICENSE"
keywords = ["constraints", "cdcl", "sat", "two-watched-literals"]
categories = ["algorithms", "data-structures"]

[dependencies]
tracing = "0.1.44"
